# robosys2025

./: .gitignore  README.md  hoga  kadai  plus  plus_std  test.bash
.github/workflows/: test.yml
mypkg/: .gitignore  MANIFEST.in  package.xml  setup.cfg  setup.py  talker.py
mypkg/.github/workflows/: test.yml
mypkg/launch/: talk_listen.launch.py
mypkg/mypkg/: listener.py  taker.py  talker.py
mypkg/test/: test.bash
test/: test.bash  test_kadai.bats
